[tool.poetry]
name = "hacs-tenda-ax3000"
version = "0.1.0"
description = ""
authors = ["ricterzheng <ricterzheng@tencent.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13"
setuptools = "^75.1.0"
requests = "^2.32.3"
voluptuous = "^0.15.2"
homeassistant = "^2024.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
